# cy-design

./: .commitlintrc.json  .env.example  .gitignore  .prettierignore  .prettierrc  README.md  _fix_api.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-deploy.bat  docker-start.bat  docker-stop.bat  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  start.ps1  tsconfig.base.json
.github/workflows/: ci.yml
config/: modules.json
docs/: ISSUES-AND-IMPROVEMENTS.md  PROJECT-MATURITY-TASKS.md  README.md
docs/architecture/: module-contract.md  overview.md
docs/development/: coding-standards.md  release-flow.md  setup.md
docs/operations/: deploy.md  monitoring.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  app.css  main.tsx
frontend/src/components/: AppShell.tsx  ModuleFrame.tsx  ServiceControlButton.tsx  Sidebar.tsx  StatusPill.tsx
platform_api/: .dockerignore  Dockerfile  requirements.txt
platform_api/app/: config.py  indexer.py  main.py  models.py  module_registry.py  process_manager.py
platform_api/tests/: test_health.py
scripts/: check-env.ps1  dev-all.ps1  dev-module.ps1  dev-platform.ps1  run-frontend-task.mjs
shared/: requirements-base.txt  requirements-dev.txt
shared/backend/: __init__.py
shared/frontend/: eslint.config.js  index.ts  package.json  tsconfig.json  vite.config.base.ts
tests/: test_shared_backend.py
(+32 files in other folders)
